--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" href="Resources/Favicon_2.0.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.png" type="image/x-icon">
